# HVAC-Hydronic-Network-Solver

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  schaltung.yaml
docs/: architektur.md  erweitern.md  idelchik_t_stueck_sammlung.md  idelchik_t_stueck_verteilung.md  numerik.md  roadmap.md
examples/: 01_single_loop.yaml  02_parallel_radiators.yaml  03_mixed_floorheating.yaml  04_heatpump_separator.yaml  05_umlenk_einspritz.yaml  06_umlenk_einspritz_flow_resistance.yaml  07_twe_heizkreisverteiler.py  08_ventilautoritaet.py  09_energetikum_lueftungsregister.py  09_energetikum_lueftungsregister.yaml  referenzwerte_fh_verteiler.txt  run_examples.py  validation_fh_verteiler.py
src/hydraulik/: __init__.py  air_editor_template.html  cli.py  editor.py  editor_template.html  exceptions.py  fluids.py  friction.py  network.py  params.py  results.py  server.py  yaml_loader.py
src/hydraulik/air/: __init__.py  adapter.py  components.py  loader.py
src/hydraulik/components/: __init__.py  base.py  boundaries.py  coils.py  conduit.py  connectors.py  emitters.py  idelchik.py  pipe.py  plants.py  pump.py  registry.py  resistance.py  sensors.py  separators.py  storage.py  valves.py
src/hydraulik/solver/: hydraulic.py  settings.py  thermal.py
tests/: test_air_vka.py  test_connectors_sources.py  test_editor.py  test_flow_resistance.py  test_friction.py  test_hydraulics.py  test_sensors.py  test_server.py  test_tee_idelchik.py  test_thermal.py  test_ts_grouping.py  test_units_equivalence.py  test_validation_fh_verteiler.py  test_yaml_and_examples.py
(+9 files in other folders)
